add abstraktit-tables and QGIS-project file

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 POSTGRES_PASSWORD=postgres
 
 INFRAO_DB=infrao
-INFRAO_USER=infrao_admin
-INFRAO_PASSWORD=qwerty
+INFRAO_DBA=infrao_dba
+INFRAO_DBA_PASSWORD=qwerty
+INFRAO_ADMIN=infrao_admin
+INFRAO_ADMIN_PASSWORD=mysecretpassu
