--- a/docker/postgis/Dockerfile
+++ b/docker/postgis/Dockerfile
@@ -1,9 +1,9 @@
-FROM postgres:13
+FROM postgres:14
 
 LABEL maintainer="PostGIS Project - https://postgis.net"
 
 ENV POSTGIS_MAJOR 3
-ENV POSTGIS_VERSION 3.1.1+dfsg-1
+ENV POSTGIS_VERSION 3.3.2+dfsg-1.pgdg110+1
 
 RUN apt-get update \
       && apt-cache showpkg postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR \
