Remove infrao_dba role

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,6 @@ services:
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - INFRAO_DB=${INFRAO_DB}
-      - INFRAO_DBA=${INFRAO_DBA}
-      - INFRAO_DBA_PASSWORD=${INFRAO_DBA_PASSWORD}
       - INFRAO_ADMIN=${INFRAO_ADMIN}
       - INFRAO_ADMIN_PASSWORD=${INFRAO_ADMIN_PASSWORD}
     ports:
@@ -26,8 +24,8 @@ services:
       - db
     profiles: ["dev"]
     environment:
-      - FLYWAY_USER=${INFRAO_DBA}
-      - FLYWAY_PASSWORD=${INFRAO_DBA_PASSWORD}
+      - FLYWAY_USER=${INFRAO_ADMIN}
+      - FLYWAY_PASSWORD=${INFRAO_ADMIN_PASSWORD}
       - FLYWAY_URL=jdbc:postgresql://db/${INFRAO_DB}
     volumes:
       - ./db/migrations:/flyway/sql
